replace Datetypeconverter with base64Decoder to fix travis